--- a/core/package.json
+++ b/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@agent-security/core",
   "version": "0.1.0",
-  "description": "Agent Runtime Security - Core Policy Engine",
+  "description": "Open-source SDK for adding runtime security policies to AI agents",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -9,11 +9,12 @@
     "watch": "tsc --watch",
     "clean": "rm -rf dist"
   },
-  "keywords": ["agent", "security", "policy"],
+  "keywords": ["agent", "security", "policy", "sdk", "ai", "llm", "agentic"],
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.11.0",
+    "@types/uuid": "^10.0.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
