--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,39 +12,37 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x, 20.x]
-
+    
     steps:
     - uses: actions/checkout@v3
-
+    
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-
+    
     - name: Install dependencies
-      run: npm ci
-
+      run: npm install
+    
     - name: Build core
       run: cd core && npm run build
-
+    
     - name: Run tests
       run: cd core && npm test
 
   typecheck:
     runs-on: ubuntu-latest
-
+    
     steps:
     - uses: actions/checkout@v3
-
+    
     - name: Use Node.js
       uses: actions/setup-node@v3
       with:
         node-version: 20.x
-        cache: 'npm'
-
+    
     - name: Install dependencies
-      run: npm ci
-
+      run: npm install
+    
     - name: Type check core
       run: cd core && npx tsc --noEmit
